restructuring, mainly around script execution functionalities
also web ui for testing scripts
