# ui/src/lib/client/openapi-3.0.yaml
@@ -12,7 +12,6 @@ components:
         script:
           type: string
       required:
-        - id
         - description
         - script
       type: object
@@ -94,7 +93,6 @@ components:
           readOnly: true
           type: integer
       required:
-        - id
         - description
         - cronExpression
       type: object
@@ -212,6 +210,27 @@ components:
         - token
         - expiry
       type: object
+    ScriptExecutionRequest:
+      additionalProperties: false
+      properties:
+        $schema:
+          description: A URL to the JSON Schema for this object.
+          example: https://example.com/schemas/ScriptExecutionRequest.json
+          format: uri
+          readOnly: true
+          type: string
+        context:
+          additionalProperties:
+            type: string
+          description: Risor script to execute.
+          type: object
+        script:
+          description: Risor script to execute.
+          type: string
+      required:
+        - script
+        - context
+      type: object
     Series:
       additionalProperties: false
       properties:
@@ -311,8 +330,6 @@ components:
           format: int64
           readOnly: true
           type: integer
-      required:
-        - id
       type: object
   securitySchemes:
     token:
@@ -925,6 +942,26 @@ paths:
           name: Authorization
           schema:
             type: string
+      responses:
+        "204":
+          description: No Content
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      security:
+        - token: []
+  /scripting/execute:
+    post:
+      operationId: executeScript
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ScriptExecutionRequest"
+        required: true
       responses:
         "204":
           description: No Content
